# coffee_app

./: .tox.ini.swp  .woodpecker.yml  00fluentd-sidecar-config.yml  00pod_config.yml  00test.yml  Dockerfile  docker-compose.yml  pyproject.toml  start.py  tox.ini
backup 1.6./: index.html
coffee_app/: main.py  menu.py  start.py  test_prettytable.py  test_turtle.py
src/: coffee_maker.py  index.html  main.py  menu.py  money_machine.py  recipes.html  resources.html  turned_off.html
src/coffee/: coffee_maker.py  main.py  menu.py
src/coffee/static/: script.js  style.css
src/coffee/templates/: index.html
src/coffee/testing/: test_coffee_maker.py  test_main.py  test_money_machine.py
static/: script.js
templates/: index.html
testing/: test_main.py
