[tool.pdm]

[tool.pdm.scripts]
start = "uvicorn coffee.main:app --host=0.0.0.0"

[tool.pdm.build]
includes = ["coffee/static/"]

[project]
name = "coffee"
version = "0.0.1"
description = ""
authors = [
    {name = "Daniel Martin", email = "daniel.martin@scandio.de"},
]
dependencies = [
    "fastapi[all]>=0.95.1",
    "jinja2>=3.1.2",
]
requires-python = ">=3.10"
license = {text = "MIT"}
