[tool.pdm]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "coffee"
version = "0.0.1"
description = ""
authors = [
    {name = "Daniel Martin", email = "daniel.martin@scandio.de"},
]
dependencies = [
    "fastapi[all]>=0.95.1",
    "jinja2>=3.1.2",
	"psycopg2-binary>=2.8",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm.scripts]
start = "uvicorn coffee.main:app --host=0.0.0.0 --reload"

[tool.pdm.build]
includes = ["src", "src/static/*", "src/templates/*"]
package-dir = "src"
