[tool.pdm]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "coffee"
version = "0.0.1"
description = ""
authors = [
    {name = "Daniel Martin", email = "daniel.martin@scandio.de"},
]
dependencies = [
    "fastapi[all]>=0.95.1",
    "jinja2>=3.1.2",
    "psycopg2-binary>=2.9",
    "pydantic-settings>=0.2.5",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.3.1",
    "tox>=4.6.3",
    "tox-docker>=4.1.0",
    "httpx>=0.24.1",
]

[tool.pdm.scripts]
start = "uvicorn coffee.main:app --host=0.0.0.0"

[tool.pdm.build]
includes = ["src", "src/static/*", "src/templates/*"]
package-dir = "src"
